<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_height="match_parent">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/button_redondeado"
            android:elevation="5dp"
            android:onClick="onClickJugar"
            android:text="@string/Jugar"
            android:textAllCaps="false"
            android:textColor="@color/colorBlanco"
            android:textSize="15sp"
            android:translationZ="5dp"></Button>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/button_redondeado"
            android:elevation="5dp"
            android:onClick="onClickVerPuntaje"
            android:text="@string/VerPuntaje"
            android:textAllCaps="false"
            android:textColor="@color/colorBlanco"
            android:textSize="15sp"
            android:translationZ="5dp"></Button>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/button_redondeado"
            android:elevation="5dp"
            android:onClick="onClickVerRespuestaCorrecta"
            android:text="@string/VerRepuestaCorrecta"
            android:textAllCaps="false"
            android:textColor="@color/colorBlanco"
            android:textSize="15sp"
            android:translationZ="5dp"></Button>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/button_redondeado"
            android:elevation="5dp"
            android:onClick="onClickVerModificar"
            android:text="@string/CambiarJug"
            android:textAllCaps="false"
            android:textColor="@color/colorBlanco"
            android:textSize="15sp"
            android:translationZ="5dp"></Button>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlanco"
            android:layout_gravity="center"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/button_redondeado"
            android:elevation="5dp"
            android:onClick="onClickDatos"
            android:text="@string/Datos"
            android:textAllCaps="false"
            android:textSize="15sp"
            android:translationZ="5dp"></Button>

    </LinearLayout>
</LinearLayout>