<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Puntaje">
    <LinearLayout
        android:layout_width="match_parent"
        android:weightSum="1"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="0.15"
            android:layout_height="0dp">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="0.6"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="match_parent"
                    android:text="@string/Jugador"
                    android:textSize="25sp"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:layout_height="match_parent">
                </TextView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="0.4"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="match_parent"
                    android:text="@string/Puntaje"
                    android:textSize="25sp"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:layout_height="match_parent">
                </TextView>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="0.1"
            android:layout_height="0dp">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="0.6"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/txtJugadorPuntaje"
                    android:layout_width="match_parent"
                    android:text="@string/nombreJug"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:layout_height="match_parent">
                </TextView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="0.4"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/txtPPuntaje"
                    android:layout_width="match_parent"
                    android:text="@string/PuntajeInicio"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:layout_height="match_parent">
                </TextView>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>